--- a/css/review.css
+++ b/css/review.css
@@ -10,52 +10,8 @@ body {
     top: 0;
     left: 0;            
 }
-#rectangle-1 {
-    padding: 20px;
-    position: absolute;
-    width: 70%;
-    height: 60%;
-    background: white;
-    right: 100px;
-    top: 230px;
-    border-radius: 14px;
-    box-shadow: 1px 1px 4px rgb(150, 150, 150);
-}
-#rectangle-2 {
-    right: 0px;
-    top: 0px;
-    padding: 10px;
-    position: absolute;
-    width: 700px;
-    height: 50px;
-    background: rgb(49, 52, 66);
-    border-radius: 14px;
-    font-size: 35px;
-    color: white;
-    font-weight: 100 lighter;
-    text-align: center;
-    font-family: 'Poppins';
-}
-#rectangle-3 {
-    left: 20px;
-    padding: 10px;
-    position: absolute;
-    width: 360px;
-    height: 200px;
-    background: white;
-    border-radius: 14px;
-    top: 180px;
-}
-#rectangle-4 {
-    padding: 10px;
-    position: absolute;
-    width: 260px;
-    height: 300px;
-    background: white;
-    border-radius: 14px;
-    top: 80px;
-    right: 20px;
-}
+
+
 h1 {
     position:absolute;
     font-family: 'Poppins';
@@ -153,7 +109,12 @@ li{
     cursor: pointer;
     
 }
-li:hover{
+a{
+    text-decoration: none;
+    color: white;
+}
+
+a:hover{
     color: #2D55B4;
 }
 
@@ -196,10 +157,31 @@ ul li:nth-child(6){
   }
 
   .list_review{
-    
+    font-size: 1.1em;
     position: absolute;
-    bottom: 300px;
-    z-index: 100;
-    left: 50%;
-      word-spacing: 50%;
+    font-weight: lighter;
+    top: 200px;
+    left: 300px;
+   
+  }
+
+  .list_review thead tr{
+    position: absolute;
+    background-color: #5f5f5f;
+    color: #ffffff;
+    text-align: left;
+    min-width: 1000px;  
+    
+  }
+
+
+  
+  .title_body{
+    border-collapse: collapse;
+    position: absolute;
+    font-size: 1em;
+    font-weight: lighter;
+    top: 40px;
+    min-width: 1000px;
+
   }
