--- a/css/review.css
+++ b/css/review.css
@@ -20,53 +20,10 @@ h1 {
     font-size: 40px;
     color: rgb(45, 85, 180);
 }
-.popup {
-    margin: auto;
-    width: 700px;
-    height: 400px;
-    background: rgb(239, 242, 251);
-    padding: 10px;
-    visibility: hidden;
-    border-radius: 14px;
-    position: relative;
-    z-index: 2;
-}
-.open-popup {
-    visibility: visible;
-}
-.overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.4);
-    backdrop-filter: blur(5px); /* Add blur effect */
-    z-index: 1; /* Make sure the overlay is behind the popup */
-    display: none;
-}
-.open-overlay {
-    display: block;
-}
-button {
-    top: 90px;
-    position: absolute;
-    right: 40px;
-    background-color: rgb(35, 55, 102);
-    border-radius: 8px;
-    border: none;
-    color: white;
-    width: 90px;
-    height: 27px;
-    font-weight: 100;
-    font-size: 17px;
-    box-shadow: 1px 1px 4px rgb(150, 150, 150);
-    
-}
-button:hover {
-    cursor: pointer;
-    background-color: rgb(43, 67, 122); 
-}
+
+
+
+
 .sidebar{
 position: absolute;
 width: 260px;
@@ -192,19 +149,40 @@ ul li:nth-child(6){
     vertical-align: middle;
 }
 
-.review-btn, .delete-btn {
-    cursor: pointer;
+td:nth-child(5), td:nth-child(6) {
+    justify-content: space-between; 
+    align-items: center;           
+    display: inline-block;
+}
+
+
+button {
+    padding: 8px 16px;
     font-size: 14px;
+    border: none;
     border-radius: 5px;
-    transition: transform 0.2s;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+/* Review button styling */
+.review-btn {
+    background-color: #233766; 
+    color: white;
 }
 
 .review-btn:hover {
-    transform: scale(1.1);
-    background-color: darkblue;
+    background-color: #1e2f56; 
+    transform: scale(1.05);
+}
+
+
+.delete-btn {
+    background-color: #71161f; 
+    color: white;
 }
 
 .delete-btn:hover {
-    transform: scale(1.1);
-    background-color: darkred;
+    background-color: #581118; 
+    transform: scale(1.05);
 }
