--- a/css/ticket.css
+++ b/css/ticket.css
@@ -1,14 +1,3 @@
-textarea::placeholder {
-    color: rgb(150, 150, 150);
-}
-div:empty::before
-{
-    font-family: 'sans-serif';
-    color: rgb(150, 150, 150);
-    text-align-last: initial;
-    font-size: 22px;
-    content: attr(placeholder);
-}
 html {
     height: 100%;
 }
@@ -23,9 +12,9 @@ html {
 #rectangle-1 {
     position: absolute;
     width: 70em;
-    height: 500px;
+    height: 35em;
     background: white;
-    right: 100px;
+    right: 10em;
     top: 200px;
     border-radius: 14px;
     box-shadow: 1px 1px 4px rgb(150, 150, 150);
@@ -36,18 +25,18 @@ body {
     font-family: 'Poppins';
     background: rgb(239, 242, 251);
 }
-.form-action-buttons input{
+#submit_btn {
     font-family: 'Poppins';
     color: white;
     border: none;
     height: 8%;
-    width: 85%;
+    width: 50em;
     position: absolute;
-    top: 85%;
+    top: 24em;
     left: 5%;
     right: 5%;
     font-weight: normal;
-    font-size: 24px;
+    font-size: 20px;
     background-color: rgb(105, 0, 13); 
     border-radius: 5px;
 }
@@ -64,34 +53,30 @@ label {
     margin-left: 40px;
     left: 60px;
 }
-a{
-    text-decoration: none;
-    color: white;
-}
+
 
 .title_box input{
-    
-    background-color: #d5d5d5;
+    font-family: 'sans-serif';
+    background-color: white;
     position: absolute ;
-    height: 3em;
-    width: 70em;
+    height: 2em;
+    width: 50em;
     left: 5%;
     right: 5%;
     border: none;
-    border-radius: 5px;
+    outline:none;
+    font-size: 20px;
+    top: 4em;
+    border-bottom: 1px solid ;
+    border-color: rgb(200, 200, 200);
 }
 
-.text_body input{
-    background-color: #d5d5d5;
-    border-radius: 5px;
-    border: none;
-    position: absolute ;
-    height: 13em;
-    width: 70em;
-    left: 5%;
-    right: 5%;
-    top: 15em;
+.title_box::placeholder {
+    color: rgb(150, 150, 150);
+    z-index: 20;
+    font-family: 'sans-serif';
 }
+
 .ticket_head{
     position: absolute;
     top: 9em;
@@ -103,45 +88,32 @@ a:hover{
 }
 
 textarea {
-    color: rgb(50, 50, 50);
+    position: relative;
     font-family: 'sans-serif';
-    resize: none;
-    padding-top: 1%;
-    padding-left: 1%;
-    line-height: 1.4;
-    font-size: 22px;
-    border-radius: 5px;
-    height: 8%;
-    width: 84%;
-    background: rgb(213, 213, 213);
-    margin-left: 7.5%;
+    background-color: white;
+    height: 10em;
+    width: 49.7em;
+    left: 5%;
+    right: 5%;
     border: none;
+    outline: none;
+    border-bottom: solid 1px;
+    border-color: rgb(200, 200, 200);
     overflow: hidden; 
+    top: 8em;
+    resize:none;
+    font-size: 20px;
 }
-#fake_textarea {
-    color: rgb(50, 50, 50);
-    padding-top: 1%;
-    padding-left: 1%;
-    font-family: 'sans-serif';
-    resize: none;
-    font-size: 22px;
-    border-radius: 5px;
-    height: 47%;
-    width: 84%;
-    background: rgb(213, 213, 213);
-    margin-left: 7.5%;
-    margin-top: 20px;
-    overflow: hidden; 
-    text-overflow: ellipsis;
+
+textarea::placeholder {
+    color: rgb(150, 150, 150);
 }
+
 button:hover {
     cursor: pointer;
     background-color: rgb(120, 0, 16); 
 }
-textarea:hover {
-    background-color: rgb(225, 225, 225);
-    border: 1px solid;
-}
+
 #fake_textarea:hover {
     background-color: rgb(225, 225, 225);
     border: 1px solid;
