--- a/css/profile.css
+++ b/css/profile.css
@@ -1,64 +1,85 @@
-      
 body {
     margin: 0;
-    background-color: #f8f9fa;
-    font-family: 'Poppins', sans-serif;
-    color: #343a40;
+    background-color: #EFF2FB;
+    font-family: Poppins, sans-serif;
 }
 
+.sidebar-wrapper {
+    position: absolute;
+    width: 260px;
+    height: 100vh;
+    transition: width 0.3s ease-in-out;
+}
+
+.sidebar-wrapper:hover {
+    width: 260px;
+}
 
 .sidebar {
-    position: fixed;
     width: 260px;
     height: 100%;
-    background-color: #212529;
-    border-radius: 0 30px 30px 0;
-    box-shadow: 2px 0 8px rgba(0, 0, 0, 0.1);
-    color: white;
-    display: flex;
-    flex-direction: column;
-    padding-top: 30px;
+    border-radius: 0% 30px 30px 0%;
+    background-color: #313442;
+    transition: width 0.3s ease-in-out;
+    overflow: hidden;
 }
 
-.sidediv ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+.sidebar-wrapper:not(:hover) .sidebar {
+    width: 150px;
 }
 
-.sidediv li {
-    font-size: 18px;
-    margin: 20px 0;
-    padding: 10px 20px;
-    border-radius: 10px;
-    transition: background-color 0.3s ease;
+.sidediv {
+    padding: 20px;
+    margin-top: 50px;
 }
 
-.sidediv li:hover {
-    background-color: #343a40;
-    cursor: pointer;
-}
-
-.sidediv a {
+.sidebar a {
     text-decoration: none;
     color: white;
     display: flex;
     align-items: center;
+    white-space: nowrap;
+    overflow: hidden;
+    transition: all 0.3s ease-in-out;
+}
+
+.sidebar li {
+    list-style: none;
+    margin-bottom: 70px;
+    font-size: 21px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.sidebar-wrapper:not(:hover) .sidebar li {
+    font-size: 0;
+}
+
+.sidebar-wrapper:not(:hover) .sidebar i {
+    font-size: 24px;
 }
 
 .sidediv i {
     margin-right: 10px;
+    font-size: 24px;
+    transition: all 0.3s ease-in-out;
+}
+
+.sidebar li:hover {
+    transform: translateX(10px);
+}
+
+.sidebar-wrapper .sidebar li.active {
+    color: white;
+    border-left: 8px solid #ffffff;
+    padding-left: 10px;
 }
 
 
-a{
-    text-decoration: none;
-    color: white;
-
+ul li:nth-child(5){
+    font-weight: bolder;
 }
 
 .content {
-    margin-left: 280px;
     padding: 30px;
 }
 
@@ -67,7 +88,6 @@ a{
     color: #007bff;
     margin-bottom: 20px;
 }
-
 
 .card {
     border: none;
@@ -231,15 +251,8 @@ a{
     background-color: #ddd;
 }
 
-
-@media (max-width: 768px) {
-    .sidebar {
-        width: 100%;
-        height: auto;
-        border-radius: 0;
-    }
-
-    .content {
-        margin-left: 0;
-    }
+.sidebar li:hover {
+    transform: translateX(10px);
+    background-color: #313442;
+    color: #FFFFFF;
 }
